--- a/templates/form.html
+++ b/templates/form.html
@@ -3,27 +3,45 @@
 <head>
     <title>{{ title }} Sentiment Analysis</title>
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}"> -->
+    <style>
+        input[type=button],
+        input[type=submit],
+        input[type=reset] {
+            background-color: #04AA6D;
+            border: none;
+            color: black;
+            padding: 16px 32px;
+            text-decoration: none;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Welcome To Sentiment Analyzer</h1>
-    <form method="POST">
-        <textarea name="text" placeholder="Say Something:" rows="10" cols="109"></textarea><br><br>
-
-        <input class="example_a" type="submit">
-    </form>
-    {% if final %}
     <div>
-        <div>
-            <!-- <h3>The Sentiment of sentence:: '{{ text }}' </h3> <h2>{{sentiment}}</h2> -->
+        <h1 style="text-align: center;">Welcome To Sentiment Analyzer</h1>
+        <form method="POST">
+            <textarea name="text" placeholder="Say Something:" rows="10" cols="70"></textarea><br><br>
 
-            <h3>Sentence : '{{ text }}' </h3>
-            <h3>Sentiment : {{ sentiment }} </h3>
+            <input class="example_a" type="submit">
+        </form>
+        {% if final %}
+        <div>
+            <div>
+                <label for="text">Sentence :</label>
+                <h3 id="text" style="color:black"> {{ text }} </h3>
+                <label for="text">Sentiment :</label>
+                {% if sentiment == 'Negative' %}
+                <h3 style="color:red">{{ sentiment }} </h3>
+                {% else %}
+                <h3 style="color:green">{{ sentiment }} </h3>
+                {% endif %}
+            </div>
+            {% else %}
+            <p></p>
+            {% endif %}
         </div>
-        
-        {% else %}
-        <p></p>
-        {% endif %}
     </div>
 </body>
 
